--- a/web/viewer.html
+++ b/web/viewer.html
@@ -1,37 +1,14 @@
-﻿<!DOCTYPE html>
-<!--
-Copyright 2012 Mozilla Foundation
+<!DOCTYPE html>
 
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-
-Adobe CMap resources are covered by their own copyright and license:
-http://sourceforge.net/adobe/cmap/wiki/License/
--->
-<html dir="ltr" mozdisallowselectionprint moznomarginboxes>
+<html dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<!--#if GENERIC || CHROME-->
-    <meta name="google" content="notranslate">
-<!--#endif-->
-    <title>PDF.js viewer</title>
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-<!--#if FIREFOX || MOZCENTRAL-->
-<!--#include viewer-snippet-firefox-extension.html-->
-<!--#endif-->
-<!--#if CHROME-->
-<!--#include viewer-snippet-chrome-extension.html-->
-<!--#endif-->
+
+    <title>PDF.js viewer</title>
 
     <link rel="stylesheet" href="viewer.css"/>
 <!--#if !PRODUCTION-->
@@ -387,5 +364,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
 <!--#if !(FIREFOX || MOZCENTRAL)-->
 <!--#include viewer-snippet-mozPrintCallback-polyfill.html-->
 <!--#endif--->
+
+<script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="eyy16c3k31op26s"></script>
   </body>
 </html>
